--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "rollup": "^2.75.6",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
     "rollup-plugin-vue": "^5.1.9",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
     "vue-template-compiler": "^2.6.14"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.14"
   }
 }
