--- a/package.json
+++ b/package.json
@@ -6,20 +6,46 @@
   "typings": "types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "rollup -c --watch",
     "build": "rollup -c",
-    "build:all": "rollup -c rollup.all.config.js"
+    "build:all": "rollup -c rollup.all.config.js",
+    "lint": "eslint --fix --ext .ts,.vue packages"
   },
   "keywords": [
     "ui",
     "rollup",
     "marvelous"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:benjamin0809/marvelous-ui.git"
+  },
   "author": "Benjamin Chiu",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,vue}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
     "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
     "rollup": "^2.75.6",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
@@ -27,7 +53,9 @@
     "rollup-plugin-vue": "^5.1.9",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-eslint-parser": "^7.11.0",
+    "vue-template-compiler": "^2.6.14",
+    "yarn": "^1.22.19"
   },
   "peerDependencies": {
     "vue": "^2.6.14"
